--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,17 @@
         "*_test.py"
     ],
     "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.unittestEnabled": true,
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "Demo BD",
+            "database": "demo",
+            "username": "postgres",
+            "connectionTimeout": 30
+        }
+    ]
 }
